fixed spacing and scroll into view

--- a/src/components/shared/painting-info-template/painting-info-template.module.scss
+++ b/src/components/shared/painting-info-template/painting-info-template.module.scss
@@ -67,10 +67,13 @@
   margin-top: 25px;
 }
 
+.moreSpacing {
+  margin-top: 2rem;
+}
+
 .video {
   width: 100%;
   height: 600px;
-  margin-top: 1rem;
   border: none;
 }
 
